--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Sound Buttons</title>
     <style>
         @font-face {
@@ -20,7 +21,7 @@
         .button {
             border: none;
             background: none;
-            margin: 20px;
+            margin: 15px;
             cursor: pointer;
         }
 
@@ -41,15 +42,15 @@
         }
 
         .footer-text {
-            margin-top: 40px;
+            margin-top: 30px;
             font-family: 'Comfortaa', cursive, sans-serif;
-            font-size: 36px;
+            font-size: 28px;
         }
 
         .link-button {
             margin-top: 20px;
-            padding: 12px 24px;
-            font-size: 18px;
+            padding: 10px 20px;
+            font-size: 16px;
             background-color: #0088cc;
             color: white;
             border: none;
@@ -61,9 +62,30 @@
         }
 
         .bottom-text {
-            margin-top: 50px;
-            font-size: 20px;
+            margin-top: 40px;
+            font-size: 18px;
             color: #555;
+        }
+
+        /* Адаптивные стили для маленьких экранов */
+        @media (max-width: 600px) {
+            .button img {
+                width: 70px;
+                height: 70px;
+            }
+
+            .link-button {
+                padding: 8px 16px;
+                font-size: 14px;
+            }
+
+            .footer-text {
+                font-size: 22px;
+            }
+
+            .bottom-text {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
